--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -11,6 +11,8 @@ jobs:
         with:
           ruby-version: 2.5
       - name: Install dependencies
-        run: bundle install
+        run: |
+          apt-get install -y libsqlite3-dev
+          bundle install
       - name: Rspec
         run: bundle exec rspec
