--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
-    "@rails/webpacker": "5.4.2",
-    "bootstrap": "4.3.1",
-    "jquery": "^3.5.1",
+    "@rails/webpacker": "^5.4.3",
+    "bootstrap": "^4.6.1",
+    "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "turbolinks": "^5.2.0"
   },
